--- a/env.example
+++ b/env.example
@@ -7,7 +7,12 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=144589220464
 NEXT_PUBLIC_FIREBASE_APP_ID=1:144589220464:web:cf985ff307c6aaad6da2b5
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-XC8Y4ZXB0Y
 
-# AWS Configuration (for deployment)
+# AWS Amplify 환경 변수 (자동 설정됨)
+AMPLIFY_MONOREPO_APP_ROOT=.
+AMPLIFY_DIFF_DEPLOY=false
+AMPLIFY_SKIP_BACKEND_BUILD=true
+
+# AWS Configuration (for S3/CloudFront deployment - optional)
 AWS_ACCESS_KEY_ID=your_aws_access_key
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key
 AWS_REGION=ap-northeast-2
