Fix Amplify build configuration for Next.js static export

--- a/amplify.yml
+++ b/amplify.yml
@@ -9,8 +9,9 @@ frontend:
       commands:
         - echo "Building Next.js application..."
         - npm run build
+        - npm run export
   artifacts:
-    baseDirectory: .next
+    baseDirectory: out
     files:
       - '**/*'
   cache:
