--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^12.3.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
