--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.3.0",
+    "google-auth-library": "^10.4.0",
+    "googleapis": "^161.0.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
